[package]
name = "vulkan_hex"
version = "0.1.0"
authors = ["sak96"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glam = "0.16.0"
vulkano = "0.23.0"
vulkano-win = "0.23.0"
vulkano-shaders = "0.23.0"
winit = "0.24.0"
